--- a/src/pages/sudoku-wizard/sudoku-wizard.css
+++ b/src/pages/sudoku-wizard/sudoku-wizard.css
@@ -65,6 +65,7 @@ sudoku-wizard-page .content{
   display: flex;
   flex: 1;
   flex-direction: column;
+  line-height: 1rem;
 }
 
 
